[gd_scene load_steps=4 format=3 uid="uid://dgjq6vbik7oel"]

[ext_resource type="Script" uid="uid://ebs86crh1kuw" path="res://scripts/guns/shotgun.gd" id="1_ykhy1"]
[ext_resource type="PackedScene" uid="uid://cw36qho322p70" path="res://scenes/bullets/players/shotgun_bullet.tscn" id="2_a08op"]

[sub_resource type="CanvasTexture" id="CanvasTexture_46jcc"]

[node name="shotgun" type="Node2D"]
script = ExtResource("1_ykhy1")
gun_type = 2
is_enemy_gun = null
bullet_scene = ExtResource("2_a08op")
fire_rate = 1.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_46jcc")

[node name="Spawn_Left" type="Node2D" parent="."]
position = Vector2(0, -10)

[node name="Spawn_Middle" type="Node2D" parent="."]

[node name="Spawn_Right" type="Node2D" parent="."]
position = Vector2(0, 10)
